--- a/index.html
+++ b/index.html
@@ -20,71 +20,71 @@
 
 <h1>What do OS X's say command voices sound like?</h1>
 
-<P>all<br><audio src="all.mp3" controls><a href="all.mp3">all.mp3</a></audio>
-<P>Agnes<br><audio src="Agnes.mp3" controls><a href="Agnes.mp3">Agnes.mp3</a></audio>
-<P>Albert<br><audio src="Albert.mp3" controls><a href="Albert.mp3">Albert.mp3</a></audio>
-<P>Alex<br><audio src="Alex.mp3" controls><a href="Alex.mp3">Alex.mp3</a></audio>
-<P>Alice<br><audio src="Alice.mp3" controls><a href="Alice.mp3">Alice.mp3</a></audio>
-<P>Alva<br><audio src="Alva.mp3" controls><a href="Alva.mp3">Alva.mp3</a></audio>
-<P>Amelie<br><audio src="Amelie.mp3" controls><a href="Amelie.mp3">Amelie.mp3</a></audio>
-<P>Anna<br><audio src="Anna.mp3" controls><a href="Anna.mp3">Anna.mp3</a></audio>
-<P>Bad News<br><audio src="Bad News.mp3" controls><a href="Bad News.mp3">Bad News.mp3</a></audio>
-<P>Bahh<br><audio src="Bahh.mp3" controls><a href="Bahh.mp3">Bahh.mp3</a></audio>
-<P>Bells<br><audio src="Bells.mp3" controls><a href="Bells.mp3">Bells.mp3</a></audio>
-<P>Boing<br><audio src="Boing.mp3" controls><a href="Boing.mp3">Boing.mp3</a></audio>
-<P>Bruce<br><audio src="Bruce.mp3" controls><a href="Bruce.mp3">Bruce.mp3</a></audio>
-<P>Bubbles<br><audio src="Bubbles.mp3" controls><a href="Bubbles.mp3">Bubbles.mp3</a></audio>
-<P>Carmit<br><audio src="Carmit.mp3" controls><a href="Carmit.mp3">Carmit.mp3</a></audio>
-<P>Cellos<br><audio src="Cellos.mp3" controls><a href="Cellos.mp3">Cellos.mp3</a></audio>
-<P>Damayanti<br><audio src="Damayanti.mp3" controls><a href="Damayanti.mp3">Damayanti.mp3</a></audio>
-<P>Daniel<br><audio src="Daniel.mp3" controls><a href="Daniel.mp3">Daniel.mp3</a></audio>
-<P>Deranged<br><audio src="Deranged.mp3" controls><a href="Deranged.mp3">Deranged.mp3</a></audio>
-<P>Diego<br><audio src="Diego.mp3" controls><a href="Diego.mp3">Diego.mp3</a></audio>
-<P>Ellen<br><audio src="Ellen.mp3" controls><a href="Ellen.mp3">Ellen.mp3</a></audio>
-<P>Fiona<br><audio src="Fiona.mp3" controls><a href="Fiona.mp3">Fiona.mp3</a></audio>
-<P>Fred<br><audio src="Fred.mp3" controls><a href="Fred.mp3">Fred.mp3</a></audio>
-<P>Good News<br><audio src="Good News.mp3" controls><a href="Good News.mp3">Good News.mp3</a></audio>
-<P>Hysterical<br><audio src="Hysterical.mp3" controls><a href="Hysterical.mp3">Hysterical.mp3</a></audio>
-<P>Ioana<br><audio src="Ioana.mp3" controls><a href="Ioana.mp3">Ioana.mp3</a></audio>
-<P>Joana<br><audio src="Joana.mp3" controls><a href="Joana.mp3">Joana.mp3</a></audio>
-<P>Junior<br><audio src="Junior.mp3" controls><a href="Junior.mp3">Junior.mp3</a></audio>
-<P>Kanya<br><audio src="Kanya.mp3" controls><a href="Kanya.mp3">Kanya.mp3</a></audio>
-<P>Karen<br><audio src="Karen.mp3" controls><a href="Karen.mp3">Karen.mp3</a></audio>
-<P>Kathy<br><audio src="Kathy.mp3" controls><a href="Kathy.mp3">Kathy.mp3</a></audio>
-<P>Kyoko<br><audio src="Kyoko.mp3" controls><a href="Kyoko.mp3">Kyoko.mp3</a></audio>
-<P>Laura<br><audio src="Laura.mp3" controls><a href="Laura.mp3">Laura.mp3</a></audio>
-<P>Lekha<br><audio src="Lekha.mp3" controls><a href="Lekha.mp3">Lekha.mp3</a></audio>
-<P>Luciana<br><audio src="Luciana.mp3" controls><a href="Luciana.mp3">Luciana.mp3</a></audio>
-<P>Maged<br><audio src="Maged.mp3" controls><a href="Maged.mp3">Maged.mp3</a></audio>
-<P>Mariska<br><audio src="Mariska.mp3" controls><a href="Mariska.mp3">Mariska.mp3</a></audio>
-<P>Mei-Jia<br><audio src="Mei-Jia.mp3" controls><a href="Mei-Jia.mp3">Mei-Jia.mp3</a></audio>
-<P>Melina<br><audio src="Melina.mp3" controls><a href="Melina.mp3">Melina.mp3</a></audio>
-<P>Milena<br><audio src="Milena.mp3" controls><a href="Milena.mp3">Milena.mp3</a></audio>
-<P>Moira<br><audio src="Moira.mp3" controls><a href="Moira.mp3">Moira.mp3</a></audio>
-<P>Monica<br><audio src="Monica.mp3" controls><a href="Monica.mp3">Monica.mp3</a></audio>
-<P>Nora<br><audio src="Nora.mp3" controls><a href="Nora.mp3">Nora.mp3</a></audio>
-<P>Paulina<br><audio src="Paulina.mp3" controls><a href="Paulina.mp3">Paulina.mp3</a></audio>
-<P>Pipe Organ<br><audio src="Pipe Organ.mp3" controls><a href="Pipe Organ.mp3">Pipe Organ.mp3</a></audio>
-<P>Princess<br><audio src="Princess.mp3" controls><a href="Princess.mp3">Princess.mp3</a></audio>
-<P>Ralph<br><audio src="Ralph.mp3" controls><a href="Ralph.mp3">Ralph.mp3</a></audio>
-<P>Samantha<br><audio src="Samantha.mp3" controls><a href="Samantha.mp3">Samantha.mp3</a></audio>
-<P>Sara<br><audio src="Sara.mp3" controls><a href="Sara.mp3">Sara.mp3</a></audio>
-<P>Satu<br><audio src="Satu.mp3" controls><a href="Satu.mp3">Satu.mp3</a></audio>
-<P>Sin-ji<br><audio src="Sin-ji.mp3" controls><a href="Sin-ji.mp3">Sin-ji.mp3</a></audio>
-<P>Tessa<br><audio src="Tessa.mp3" controls><a href="Tessa.mp3">Tessa.mp3</a></audio>
-<P>Thomas<br><audio src="Thomas.mp3" controls><a href="Thomas.mp3">Thomas.mp3</a></audio>
-<P>Ting-Ting<br><audio src="Ting-Ting.mp3" controls><a href="Ting-Ting.mp3">Ting-Ting.mp3</a></audio>
-<P>Trinoids<br><audio src="Trinoids.mp3" controls><a href="Trinoids.mp3">Trinoids.mp3</a></audio>
-<P>Veena<br><audio src="Veena.mp3" controls><a href="Veena.mp3">Veena.mp3</a></audio>
-<P>Vicki<br><audio src="Vicki.mp3" controls><a href="Vicki.mp3">Vicki.mp3</a></audio>
-<P>Victoria<br><audio src="Victoria.mp3" controls><a href="Victoria.mp3">Victoria.mp3</a></audio>
-<P>Whisper<br><audio src="Whisper.mp3" controls><a href="Whisper.mp3">Whisper.mp3</a></audio>
-<P>Xander<br><audio src="Xander.mp3" controls><a href="Xander.mp3">Xander.mp3</a></audio>
-<P>Yelda<br><audio src="Yelda.mp3" controls><a href="Yelda.mp3">Yelda.mp3</a></audio>
-<P>Yuna<br><audio src="Yuna.mp3" controls><a href="Yuna.mp3">Yuna.mp3</a></audio>
-<P>Zarvox<br><audio src="Zarvox.mp3" controls><a href="Zarvox.mp3">Zarvox.mp3</a></audio>
-<P>Zosia<br><audio src="Zosia.mp3" controls><a href="Zosia.mp3">Zosia.mp3</a></audio>
-<P>Zuzana<br><audio src="Zuzana.mp3" controls><a href="Zuzana.mp3">Zuzana.mp3</a></audio>
+<P>all<br><audio src="output/all.mp3" controls><a href="output/all.mp3">all</a></audio>
+<P>Agnes<br><audio src="output/Agnes.mp3" controls><a href="output/Agnes.mp3">Agnes</a></audio>
+<P>Albert<br><audio src="output/Albert.mp3" controls><a href="output/Albert.mp3">Albert</a></audio>
+<P>Alex<br><audio src="output/Alex.mp3" controls><a href="output/Alex.mp3">Alex</a></audio>
+<P>Alice<br><audio src="output/Alice.mp3" controls><a href="output/Alice.mp3">Alice</a></audio>
+<P>Alva<br><audio src="output/Alva.mp3" controls><a href="output/Alva.mp3">Alva</a></audio>
+<P>Amelie<br><audio src="output/Amelie.mp3" controls><a href="output/Amelie.mp3">Amelie</a></audio>
+<P>Anna<br><audio src="output/Anna.mp3" controls><a href="output/Anna.mp3">Anna</a></audio>
+<P>Bad News<br><audio src="output/Bad News.mp3" controls><a href="output/Bad News.mp3">Bad News</a></audio>
+<P>Bahh<br><audio src="output/Bahh.mp3" controls><a href="output/Bahh.mp3">Bahh</a></audio>
+<P>Bells<br><audio src="output/Bells.mp3" controls><a href="output/Bells.mp3">Bells</a></audio>
+<P>Boing<br><audio src="output/Boing.mp3" controls><a href="output/Boing.mp3">Boing</a></audio>
+<P>Bruce<br><audio src="output/Bruce.mp3" controls><a href="output/Bruce.mp3">Bruce</a></audio>
+<P>Bubbles<br><audio src="output/Bubbles.mp3" controls><a href="output/Bubbles.mp3">Bubbles</a></audio>
+<P>Carmit<br><audio src="output/Carmit.mp3" controls><a href="output/Carmit.mp3">Carmit</a></audio>
+<P>Cellos<br><audio src="output/Cellos.mp3" controls><a href="output/Cellos.mp3">Cellos</a></audio>
+<P>Damayanti<br><audio src="output/Damayanti.mp3" controls><a href="output/Damayanti.mp3">Damayanti</a></audio>
+<P>Daniel<br><audio src="output/Daniel.mp3" controls><a href="output/Daniel.mp3">Daniel</a></audio>
+<P>Deranged<br><audio src="output/Deranged.mp3" controls><a href="output/Deranged.mp3">Deranged</a></audio>
+<P>Diego<br><audio src="output/Diego.mp3" controls><a href="output/Diego.mp3">Diego</a></audio>
+<P>Ellen<br><audio src="output/Ellen.mp3" controls><a href="output/Ellen.mp3">Ellen</a></audio>
+<P>Fiona<br><audio src="output/Fiona.mp3" controls><a href="output/Fiona.mp3">Fiona</a></audio>
+<P>Fred<br><audio src="output/Fred.mp3" controls><a href="output/Fred.mp3">Fred</a></audio>
+<P>Good News<br><audio src="output/Good News.mp3" controls><a href="output/Good News.mp3">Good News</a></audio>
+<P>Hysterical<br><audio src="output/Hysterical.mp3" controls><a href="output/Hysterical.mp3">Hysterical</a></audio>
+<P>Ioana<br><audio src="output/Ioana.mp3" controls><a href="output/Ioana.mp3">Ioana</a></audio>
+<P>Joana<br><audio src="output/Joana.mp3" controls><a href="output/Joana.mp3">Joana</a></audio>
+<P>Junior<br><audio src="output/Junior.mp3" controls><a href="output/Junior.mp3">Junior</a></audio>
+<P>Kanya<br><audio src="output/Kanya.mp3" controls><a href="output/Kanya.mp3">Kanya</a></audio>
+<P>Karen<br><audio src="output/Karen.mp3" controls><a href="output/Karen.mp3">Karen</a></audio>
+<P>Kathy<br><audio src="output/Kathy.mp3" controls><a href="output/Kathy.mp3">Kathy</a></audio>
+<P>Kyoko<br><audio src="output/Kyoko.mp3" controls><a href="output/Kyoko.mp3">Kyoko</a></audio>
+<P>Laura<br><audio src="output/Laura.mp3" controls><a href="output/Laura.mp3">Laura</a></audio>
+<P>Lekha<br><audio src="output/Lekha.mp3" controls><a href="output/Lekha.mp3">Lekha</a></audio>
+<P>Luciana<br><audio src="output/Luciana.mp3" controls><a href="output/Luciana.mp3">Luciana</a></audio>
+<P>Maged<br><audio src="output/Maged.mp3" controls><a href="output/Maged.mp3">Maged</a></audio>
+<P>Mariska<br><audio src="output/Mariska.mp3" controls><a href="output/Mariska.mp3">Mariska</a></audio>
+<P>Mei-Jia<br><audio src="output/Mei-Jia.mp3" controls><a href="output/Mei-Jia.mp3">Mei-Jia</a></audio>
+<P>Melina<br><audio src="output/Melina.mp3" controls><a href="output/Melina.mp3">Melina</a></audio>
+<P>Milena<br><audio src="output/Milena.mp3" controls><a href="output/Milena.mp3">Milena</a></audio>
+<P>Moira<br><audio src="output/Moira.mp3" controls><a href="output/Moira.mp3">Moira</a></audio>
+<P>Monica<br><audio src="output/Monica.mp3" controls><a href="output/Monica.mp3">Monica</a></audio>
+<P>Nora<br><audio src="output/Nora.mp3" controls><a href="output/Nora.mp3">Nora</a></audio>
+<P>Paulina<br><audio src="output/Paulina.mp3" controls><a href="output/Paulina.mp3">Paulina</a></audio>
+<P>Pipe Organ<br><audio src="output/Pipe Organ.mp3" controls><a href="output/Pipe Organ.mp3">Pipe Organ</a></audio>
+<P>Princess<br><audio src="output/Princess.mp3" controls><a href="output/Princess.mp3">Princess</a></audio>
+<P>Ralph<br><audio src="output/Ralph.mp3" controls><a href="output/Ralph.mp3">Ralph</a></audio>
+<P>Samantha<br><audio src="output/Samantha.mp3" controls><a href="output/Samantha.mp3">Samantha</a></audio>
+<P>Sara<br><audio src="output/Sara.mp3" controls><a href="output/Sara.mp3">Sara</a></audio>
+<P>Satu<br><audio src="output/Satu.mp3" controls><a href="output/Satu.mp3">Satu</a></audio>
+<P>Sin-ji<br><audio src="output/Sin-ji.mp3" controls><a href="output/Sin-ji.mp3">Sin-ji</a></audio>
+<P>Tessa<br><audio src="output/Tessa.mp3" controls><a href="output/Tessa.mp3">Tessa</a></audio>
+<P>Thomas<br><audio src="output/Thomas.mp3" controls><a href="output/Thomas.mp3">Thomas</a></audio>
+<P>Ting-Ting<br><audio src="output/Ting-Ting.mp3" controls><a href="output/Ting-Ting.mp3">Ting-Ting</a></audio>
+<P>Trinoids<br><audio src="output/Trinoids.mp3" controls><a href="output/Trinoids.mp3">Trinoids</a></audio>
+<P>Veena<br><audio src="output/Veena.mp3" controls><a href="output/Veena.mp3">Veena</a></audio>
+<P>Vicki<br><audio src="output/Vicki.mp3" controls><a href="output/Vicki.mp3">Vicki</a></audio>
+<P>Victoria<br><audio src="output/Victoria.mp3" controls><a href="output/Victoria.mp3">Victoria</a></audio>
+<P>Whisper<br><audio src="output/Whisper.mp3" controls><a href="output/Whisper.mp3">Whisper</a></audio>
+<P>Xander<br><audio src="output/Xander.mp3" controls><a href="output/Xander.mp3">Xander</a></audio>
+<P>Yelda<br><audio src="output/Yelda.mp3" controls><a href="output/Yelda.mp3">Yelda</a></audio>
+<P>Yuna<br><audio src="output/Yuna.mp3" controls><a href="output/Yuna.mp3">Yuna</a></audio>
+<P>Zarvox<br><audio src="output/Zarvox.mp3" controls><a href="output/Zarvox.mp3">Zarvox</a></audio>
+<P>Zosia<br><audio src="output/Zosia.mp3" controls><a href="output/Zosia.mp3">Zosia</a></audio>
+<P>Zuzana<br><audio src="output/Zuzana.mp3" controls><a href="output/Zuzana.mp3">Zuzana</a></audio>
 
 </body>
 </html>
